# ipfs-compute

./: .gitignore  README.md  go.mod  go.sum  ipfs.go  notes.md  runtime.go
cli/: cheatsheet.md  clean-ds.sh  cli.go
examples/ipld/: ipld.go
examples/litepeer/: litepeer.go
examples/simpleRun/: simpleRun.go
examples/walker/: walker.go
examples/wasm/: wasm.go
functions/: simple.wasm  wordcount.wasm
functions/simple/: Cargo.toml
functions/simple/src/: lib.rs
functions/wordcount/: Cargo.toml
functions/wordcount/src/: lib.rs
interpreter/: ipl.go  script.ipl
