[package]
name = "wordcount"
version = "0.1.0"
authors = ["Alfonso de la Rocha <adlrocha@tutamail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ['cdylib']

[dependencies]
"serde_json" = "1.0.59"
"serde" = "1.0.116"
"serde_derive" = "1.0.18"
